@@ -644,6 +644,9 @@ Tests
 
 - Issue #15539: Added regression tests for Tools/scripts/pindent.py.
 
+- Issue #17304: test_hash now works with unittest test discovery.
+  Patch by Zachary Ware.
+
 - Issue #17303: test_future* now work with unittest test discovery.
   Patch by Zachary Ware.
 
